// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignalTypeFilter /> component rendering matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    onSignalTypeChange={[Function]}
    signalType="ALL"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className="heading"
          size={3}
>
          Filter by Signal Type
</Heading>,
        <TabList
          className="signalType"
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          variant="compact"
>
          <Tab
                    data-test="all-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={true}
                    tabIndex={0}
          >
                    All Signal Types
          </Tab>
          <Tab
                    data-test="analytics-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    Adobe Analytics
          </Tab>
          <Tab
                    data-test="alf-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    Actionable Log Files
          </Tab>
          <Tab
                    data-test="realtime-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    General Online Data
          </Tab>
          <Tab
                    data-test="onboarded-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    Onboarded Records
          </Tab>
</TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": "heading",
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              data-test="all-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
              tabIndex={0}
>
              All Signal Types
</Tab>,
            <Tab
              data-test="analytics-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              Adobe Analytics
</Tab>,
            <Tab
              data-test="alf-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              Actionable Log Files
</Tab>,
            <Tab
              data-test="realtime-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              General Online Data
</Tab>,
            <Tab
              data-test="onboarded-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              Onboarded Records
</Tab>,
          ],
          "className": "signalType",
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "variant": "compact",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All Signal Types",
              "data-test": "all-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "All Signal Types",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics",
              "data-test": "analytics-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "Adobe Analytics",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files",
              "data-test": "alf-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "Actionable Log Files",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data",
              "data-test": "realtime-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "General Online Data",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records",
              "data-test": "onboarded-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "Onboarded Records",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className="heading"
            size={3}
>
            Filter by Signal Type
</Heading>,
          <TabList
            className="signalType"
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            variant="compact"
>
            <Tab
                        data-test="all-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={true}
                        tabIndex={0}
            >
                        All Signal Types
            </Tab>
            <Tab
                        data-test="analytics-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        Adobe Analytics
            </Tab>
            <Tab
                        data-test="alf-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        Actionable Log Files
            </Tab>
            <Tab
                        data-test="realtime-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        General Online Data
            </Tab>
            <Tab
                        data-test="onboarded-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        Onboarded Records
            </Tab>
</TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": "heading",
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                data-test="all-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
                tabIndex={0}
>
                All Signal Types
</Tab>,
              <Tab
                data-test="analytics-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                Adobe Analytics
</Tab>,
              <Tab
                data-test="alf-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                Actionable Log Files
</Tab>,
              <Tab
                data-test="realtime-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                General Online Data
</Tab>,
              <Tab
                data-test="onboarded-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                Onboarded Records
</Tab>,
            ],
            "className": "signalType",
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "variant": "compact",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All Signal Types",
                "data-test": "all-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "All Signal Types",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics",
                "data-test": "analytics-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "Adobe Analytics",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files",
                "data-test": "alf-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "Actionable Log Files",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data",
                "data-test": "realtime-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "General Online Data",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records",
                "data-test": "onboarded-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "Onboarded Records",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<SignalTypeFilter /> component rendering renders correctly selected <Tab /> component when props.signalType change 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalTypeFilter
    onSignalTypeChange={[Function]}
    signalType="ANALYTICS"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Heading
          className="heading"
          size={3}
>
          Filter by Signal Type
</Heading>,
        <TabList
          className="signalType"
          onChange={[Function]}
          orientation="vertical"
          quiet={false}
          variant="compact"
>
          <Tab
                    data-test="all-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    All Signal Types
          </Tab>
          <Tab
                    data-test="analytics-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={true}
                    tabIndex={0}
          >
                    Adobe Analytics
          </Tab>
          <Tab
                    data-test="alf-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    Actionable Log Files
          </Tab>
          <Tab
                    data-test="realtime-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    General Online Data
          </Tab>
          <Tab
                    data-test="onboarded-signal-type-filter"
                    disabled={false}
                    invalid={false}
                    renderChildren={true}
                    selected={false}
                    tabIndex={0}
          >
                    Onboarded Records
          </Tab>
</TabList>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Filter by Signal Type",
          "className": "heading",
          "size": 3,
        },
        "ref": null,
        "rendered": "Filter by Signal Type",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Tab
              data-test="all-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              All Signal Types
</Tab>,
            <Tab
              data-test="analytics-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={true}
              tabIndex={0}
>
              Adobe Analytics
</Tab>,
            <Tab
              data-test="alf-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              Actionable Log Files
</Tab>,
            <Tab
              data-test="realtime-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              General Online Data
</Tab>,
            <Tab
              data-test="onboarded-signal-type-filter"
              disabled={false}
              invalid={false}
              renderChildren={true}
              selected={false}
              tabIndex={0}
>
              Onboarded Records
</Tab>,
          ],
          "className": "signalType",
          "onChange": [Function],
          "orientation": "vertical",
          "quiet": false,
          "variant": "compact",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "ALL",
            "nodeType": "class",
            "props": Object {
              "children": "All Signal Types",
              "data-test": "all-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "All Signal Types",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ANALYTICS",
            "nodeType": "class",
            "props": Object {
              "children": "Adobe Analytics",
              "data-test": "analytics-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": true,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "Adobe Analytics",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ALF",
            "nodeType": "class",
            "props": Object {
              "children": "Actionable Log Files",
              "data-test": "alf-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "Actionable Log Files",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "REALTIME",
            "nodeType": "class",
            "props": Object {
              "children": "General Online Data",
              "data-test": "realtime-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "General Online Data",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "ONBOARDED",
            "nodeType": "class",
            "props": Object {
              "children": "Onboarded Records",
              "data-test": "onboarded-signal-type-filter",
              "disabled": false,
              "invalid": false,
              "renderChildren": true,
              "selected": false,
              "tabIndex": 0,
            },
            "ref": null,
            "rendered": "Onboarded Records",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Heading
            className="heading"
            size={3}
>
            Filter by Signal Type
</Heading>,
          <TabList
            className="signalType"
            onChange={[Function]}
            orientation="vertical"
            quiet={false}
            variant="compact"
>
            <Tab
                        data-test="all-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        All Signal Types
            </Tab>
            <Tab
                        data-test="analytics-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={true}
                        tabIndex={0}
            >
                        Adobe Analytics
            </Tab>
            <Tab
                        data-test="alf-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        Actionable Log Files
            </Tab>
            <Tab
                        data-test="realtime-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        General Online Data
            </Tab>
            <Tab
                        data-test="onboarded-signal-type-filter"
                        disabled={false}
                        invalid={false}
                        renderChildren={true}
                        selected={false}
                        tabIndex={0}
            >
                        Onboarded Records
            </Tab>
</TabList>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Filter by Signal Type",
            "className": "heading",
            "size": 3,
          },
          "ref": null,
          "rendered": "Filter by Signal Type",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Tab
                data-test="all-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                All Signal Types
</Tab>,
              <Tab
                data-test="analytics-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={true}
                tabIndex={0}
>
                Adobe Analytics
</Tab>,
              <Tab
                data-test="alf-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                Actionable Log Files
</Tab>,
              <Tab
                data-test="realtime-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                General Online Data
</Tab>,
              <Tab
                data-test="onboarded-signal-type-filter"
                disabled={false}
                invalid={false}
                renderChildren={true}
                selected={false}
                tabIndex={0}
>
                Onboarded Records
</Tab>,
            ],
            "className": "signalType",
            "onChange": [Function],
            "orientation": "vertical",
            "quiet": false,
            "variant": "compact",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "ALL",
              "nodeType": "class",
              "props": Object {
                "children": "All Signal Types",
                "data-test": "all-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "All Signal Types",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ANALYTICS",
              "nodeType": "class",
              "props": Object {
                "children": "Adobe Analytics",
                "data-test": "analytics-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": true,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "Adobe Analytics",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ALF",
              "nodeType": "class",
              "props": Object {
                "children": "Actionable Log Files",
                "data-test": "alf-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "Actionable Log Files",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "REALTIME",
              "nodeType": "class",
              "props": Object {
                "children": "General Online Data",
                "data-test": "realtime-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "General Online Data",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "ONBOARDED",
              "nodeType": "class",
              "props": Object {
                "children": "Onboarded Records",
                "data-test": "onboarded-signal-type-filter",
                "disabled": false,
                "invalid": false,
                "renderChildren": true,
                "selected": false,
                "tabIndex": 0,
              },
              "ref": null,
              "rendered": "Onboarded Records",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
